--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,14 @@ body {
   color: #000;
   width: 100%;
   padding: 0.8rem 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  width: 100%;
 }
 
 h1 {
@@ -21,16 +29,14 @@ h1 {
   font-size: 9.4rem;
   width: 100%;
   letter-spacing: -1px;
-  line-height: 1.7;
+  line-height: 1;
 }
 
 h2 {
   font-family: "Anek Telugu", sans-serif;
-  font-weight: 500;
-  font-size: 5rem;
+  font-weight: 600;
+  font-size: 4rem;
   width: 100%;
-  letter-spacing: -0.25px;
-  line-height: 1.5;
 }
 
 h3 {
@@ -70,4 +76,322 @@ a {
 }
 a:hover {
   color: #0a2540;
+}
+
+.subtitle {
+  color: #6962f7;
+  font-family: "Anek Telugu", sans-serif;
+  font-weight: 500;
+  font-size: 1.7rem;
+  line-height: 2.6rem;
+}
+
+.subtitle2 {
+  color: #00d4ff;
+  font-family: "Anek Telugu", sans-serif;
+  font-weight: 500;
+  font-size: 1.7rem;
+  line-height: 2.6rem;
+}
+
+p {
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+  font-weight: 400;
+  margin: 1.6rem 0;
+}
+
+.secondary-text {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: #adbedc;
+  letter-spacing: 0.25rem;
+}
+
+.primary-button {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
+  letter-spacing: 0.125rem;
+  font-weight: bold;
+  border-radius: 20px;
+  background-color: #0a2540;
+  color: #fff;
+  border: none;
+  padding: 0.8rem 1.6rem;
+  transition: all 0.25s ease;
+}
+.primary-button:hover {
+  background-color: #6d7a88;
+  cursor: pointer;
+}
+
+.secondary-button {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.6rem;
+  letter-spacing: 0.125rem;
+  font-weight: bold;
+  border-radius: 20px;
+  background-color: transparent;
+  color: #0a2540;
+  border: none;
+  transition: all 0.25s ease;
+}
+.secondary-button:hover {
+  opacity: 0.75;
+  cursor: pointer;
+}
+
+.section-container {
+  width: 100%;
+  max-width: 114.4rem;
+}
+
+.two-column {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.two-column > .col-left {
+  width: 50%;
+  padding: 0 1.6rem 0 0;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+}
+.two-column > .col-right {
+  width: 50%;
+  padding: 0 0 0 1.6rem;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.with-icon {
+  display: flex;
+  align-items: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0.8rem 1.6rem 0.8rem 0;
+}
+.card img {
+  height: 5rem;
+  margin: 0 0 0.8rem;
+}
+.card h3 {
+  font-family: "Anek Telugu", sans-serif;
+  font-weight: 500;
+  font-size: 2.2rem;
+  width: 100%;
+}
+
+.hero,
+.partner-section,
+.unified-section,
+.graphic-section,
+.integration-section,
+.why-swipe-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 114.4rem;
+  padding: 0 1.6rem;
+}
+.navbar .nav-links {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+}
+.navbar .nav-links a {
+  color: #fff;
+  margin: 0 1.6rem;
+  font-weight: bold;
+}
+.navbar .nav-links a:hover {
+  text-decoration: underline;
+}
+.navbar .navbar-btn {
+  background: rgba(250, 250, 250, 0.25);
+}
+.navbar .navbar-btn:hover {
+  background: rgba(250, 250, 250, 0.5);
+}
+
+main {
+  margin: 6.4rem 0;
+}
+
+.hero p {
+  max-width: 48rem;
+}
+.hero .btn-container {
+  display: flex;
+  margin: 1.6rem 0;
+}
+.hero .btn-container button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero .btn-container button:nth-of-type(2) {
+  color: #700fff;
+  margin: 0 0 0 1.6rem;
+}
+.hero .hero-phone {
+  height: 56.4rem;
+  align-items: flex-end;
+}
+.hero .hero-phone img {
+  height: 62.8rem;
+  transform: translate(32px, -32px);
+}
+
+.partners-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  margin: 6.4rem 0;
+  column-gap: 1.6rem;
+  row-gap: 3.2rem;
+}
+.partners-grid img {
+  width: 100%;
+  place-self: center;
+}
+
+.unified-section {
+  padding: 6.4rem 0;
+}
+.unified-section h2 {
+  width: 50%;
+  margin-bottom: 1.6rem;
+}
+.unified-section .primary-button {
+  background-color: #6962f7;
+  margin: 1.6rem 0;
+}
+.unified-section .primary-button:hover {
+  background-color: #0a2540;
+}
+
+.graphic-grid {
+  display: grid;
+  grid-template-areas: "card slack slack" "phone slack slack" "phone dash dash";
+  grid-gap: 3.2rem;
+  padding: 3.2rem 0;
+}
+.graphic-grid img {
+  width: 100%;
+  box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
+}
+.graphic-grid #credit-card {
+  grid-area: card;
+}
+.graphic-grid #slack-invoice {
+  grid-area: slack;
+}
+.graphic-grid #phone {
+  grid-area: phone;
+}
+.graphic-grid #dash {
+  grid-area: dash;
+}
+
+.integration-section {
+  color: #fff;
+  background-color: #0a2540;
+}
+.integration-section h2 {
+  font-size: 5rem;
+}
+.integration-section .card-container {
+  display: flex;
+  margin: 3.2rem 0;
+}
+.integration-section .card-container .card {
+  width: 50%;
+}
+.integration-section .primary-button {
+  background-color: #00d4ff;
+  color: #0a2540;
+  margin: 1.6rem 0 0 0;
+}
+.integration-section .primary-button:hover {
+  background-color: #fff;
+}
+.integration-section .secondary-button {
+  color: #00d4ff;
+}
+.integration-section #api-code {
+  margin: 0 0 1.6rem 0;
+}
+.integration-section #api-code,
+.integration-section #terminal-code {
+  max-width: 47rem;
+  border-radius: 20px;
+}
+
+.why-swipe-section .card-container {
+  display: flex;
+  margin: 3.2rem 0;
+}
+.why-swipe-section .card-container .card {
+  width: 25%;
+  padding: 0 0.8rem 0 0;
+  margin: 0 1.6rem 0 0;
+}
+.why-swipe-section .card-container .card .secondary-text {
+  color: #000;
+  font-weight: 500;
+}
+
+.global-section {
+  background-color: #0a2540;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  position: relative;
+  padding: 19.2rem 0;
+}
+.global-section .card-container {
+  display: flex;
+  margin: 12.8rem 0;
+}
+.global-section .card-container .card {
+  width: 25%;
+  padding: 0 0.8rem 0 0;
+  margin: 0 0.8rem 0 0;
+}
+.global-section .card-container .card h3 {
+  border-left: 2px solid #00d4ff;
+  padding: 0 0 0 0.8rem;
+  line-height: 2.8rem;
+}
+.global-section a {
+  color: #00d4ff;
+}
+.global-section a:hover {
+  color: #fff;
+}
+.global-section #global {
+  max-width: 84.4rem;
+  opacity: 25%;
+  position: absolute;
+  top: 0;
 }
