--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -19,10 +19,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 main {
   width: 100%;
+  margin: $spacingXl 0 0 0;
 }
 
 h1 {
