--- a/scss/_virtual-section.scss
+++ b/scss/_virtual-section.scss
@@ -4,6 +4,19 @@
   width: 100%;
   padding: calc($spacingXl) * 2 0;
   background-color: $bggrey;
+  position: relative;
+
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: red;
+    top: -3.2rem;
+    left: 0;
+    z-index: -1;
+    background-color: $bggrey;
+  }
 
   .primary-button {
     background-color: $purple1;
@@ -27,7 +40,6 @@
     overflow: hidden;
 
     .card-top {
-      background-color: $purple1;
       width: 100%;
       height: 50%;
       display: flex;
